# electricity_meter_detection

./: CMakeLists.txt  main.cpp  readme.md
src/elec_watch/SVM/: svm_model.xml
